[package]
name = "captcha-rs"
version = "0.1.0"
authors = ["robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-httpauth = "0.4.2"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
serde = { version = "1.0.114", features = ["derive"] }
lazy_static = "1.4.0"
envy = "0.4"
anyhow = "1.0.32"
dotenv = "0.15.0"
captcha = "0.0.7"